--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "baroverlay",
+  "name": "worktimebar",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
   },
-  "author": "",
+  "author": "warllencs",
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -22,14 +22,16 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@electron/packager": "^18.3.4",
-    "electron": "31.2.0"
+    "@jest/globals": "^29.7.0",
+    "electron": "31.2.0",
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.7"
+    "socket.io": "^4.7.5"
   }
 }
